Makefile e outras coisas

--- a/tex/autoridade.tex
+++ b/tex/autoridade.tex
@@ -13,21 +13,21 @@ Nossa intenção é desenvolver um modelo matemático para a formação de estru
 O registro arqueológico revela uma dinâmica temporal na organização social dos humanos através da pré-história. Os humanos, descendendo de primatas com provável organização social hierárquica, similar às dos grandes primatas mais próximos - chimpanzés, bonobos e gorilas - passaram por um período de grupos equalitários, sem autoridade central, com baixa densidade populacional. No neolítico houve uma transição para grupos fortemente hierárquicos, conforme a densidade populacional aumenta após a revolução agrícola. Esse quadro é ilustrado pela figura \ref{fig:ushaped}. Evidências etnográficas também apontam para uma relação entre o tamanho dos grupos de humanos caçadores-coletores e suas formas de organização social\cite{Currie2010}. Grupos pequenos de humanos tendem a apresentar organização equalitária, sem concentração de poder. Grupos maiores tendem a apresentar organizações hierárquicas, concentração de poder e hereditariedade de poder. 
 \begin{figure}
 	\centering
-	\includegraphics[width = \textwidth]{figuras/ushaped.png}
- 	\caption{\label{fig:ushaped} Ilustração da história da organização social dos humanos e primatas pré-humanos.}
+	\includegraphics[width = 1.1\textwidth]{figuras/ushaped.png}
+	\caption{\label{fig:ushaped} Ilustração da história da organização social dos humanos e primatas pré-humanos.}
 \end{figure}
 
 \subsection{}
 
 \subsection{Evolução do cérebro primata e a Teoria Maquiavélica}
 
-Diversos trabalhos\cite{Dunbar2008,Dunbar2009, Dunbar2010,Aiello1993,Joffe1997} relacionam o tamanho relativo de regiões do cérebro de diversas espécies de primatas a medidas relacionadas com a capacidade social da espécie, como tamanho dos grupos em que vivem, o tamanho de coalizões, número médio de indivíduos que interagem diretamente, etc. O que é típicamente encontrado é ilustrado na figura \ref{fig:dunbarlaw}. Nessa figura mostra-se um gráfico do tamanho médio do grupo em função da razão média entre o volume do neo-córtex - região do cérebro dedicada ao planejamento, raciocínio, linguagem, entre outras funções cognitivas de ordem superior - e o volume total do cérebro para diversas espécies de primatas. O gráfico sugere uma relação do tipo lei de potência entre as duas grandezas, similar a encontradas em diversas outras comparações desse tipo. Em essência, essa relação sugere que a capacidade cognitiva dos primatas está intimamente relacionada a sua necessidade de dar conta de interações sociais cada 
+Diversos trabalhos\cite[-1cm]{Dunbar2008,Dunbar2009, Dunbar2010,Aiello1993,Joffe1997} relacionam o tamanho relativo de regiões do cérebro de diversas espécies de primatas a medidas relacionadas com a capacidade social da espécie, como tamanho dos grupos em que vivem, o tamanho de coalizões, número médio de indivíduos que interagem diretamente, etc. O que é típicamente encontrado é ilustrado na figura \ref{fig:dunbarlaw}. Essa figura mostra um gráfico do tamanho médio do grupo em função da razão média entre o volume do neo-córtex - região do cérebro dedicada ao planejamento, raciocínio, linguagem, entre outras funções cognitivas de ordem superior - e o volume total do cérebro para diversas espécies de primatas. O gráfico sugere uma relação do tipo lei de potência entre as duas grandezas, similar a encontradas em diversas outras comparações desse tipo. Em essência, essa relação sugere que a capacidade cognitiva dos primatas está intimamente relacionada a sua necessidade de dar conta de interações sociais cada 
 vez mais complexas e sugere um cenário em que o rápido crescimento na importância relativa do neo-córtex é uma resposta a uma pressão seletiva associada a essa necessidade de interação social.  
 
 \begin{figure}
 	\centering
-	\includegraphics[width = \textwidth]{figuras/dunbar.png}
- 	\caption{\label{fig:dunbarlaw} Gráfico em escala di-logaritimica do tamanho médio do grupo em função da razão média entre o volume do neo-córtex e o volume total do cérebro para diversas espécies de primatas. Dados disponíveis em \citep{Dunbar2009}.}
+	\includegraphics[width = 1.1\textwidth]{figuras/dunbar.png}
+	\caption{\label{fig:dunbarlaw} Gráfico em escala di-logaritimica do tamanho médio do grupo em função da razão média entre o volume do neo-córtex e o volume total do cérebro para diversas espécies de primatas. Dados disponíveis em \citep{Dunbar2009}.}
 \end{figure}
 
 \subsection{Dados etnoráficos (?)}
@@ -43,7 +43,7 @@ vez mais complexas e sugere um cenário em que o rápido crescimento na importâ
  \item como compartilham seus recursos um com o outro?
  \item etc...
 \end{itemize}  
-Cada agente adquire essa informação através de mecanismos diversos: através da história social do grupo, baseado no comportamento pregresso dos agentes; através de mecanismos de aprendizado social como fofoca (\textit{gossip}) em que a comunicação com outros agentes permite que o agente aprenda sobre experiências de outros; etc. Uma vez adquirida, essa informação é critica para subsidiar decisões sociais a serem tomadas pelo agente: com que grupo de agentes fazer uma coalizão, quando esperar cooperação de um certo indivíduo, etc. Erros em decisões podem custar recursos e posição social, e influenciar negativamente a capacidade reprodutiva do agente. Portanto, espera-se que uma espécie de agentes que tenha surgido por evolução via seleção natural tenha mecanismos congnitivos adequados para tentar minimizar esses erros em algum sentido. 
+Cada agente adquire essa informação através de mecanismos diversos: através da história social do grupo, baseado no comportamento pregresso dos agentes; através de mecanismos de aprendizado social como fofoca (\textit{gossip}) em que a comunicação com outros agentes permite que o agente aprenda sobre experiências de outros; etc. Uma vez adquirida, essa informação é critica para subsidiar decisões sociais a serem tomadas pelo agente: com que grupo de agentes fazer uma coalizão, quando esperar cooperação de um certo indivíduo, etc. Erros em decisões podem custar recursos e posição social, e influenciar negativamente a capacidade reprodutiva do agente. Portanto, espera-se que uma espécie de agentes que tenha surgido por evolução via seleção natural tenha mecanismos cognitivos adequados para tentar minimizar esses erros em algum sentido. 
 
 \newthought{A aquisição desse tipo de informação social} é uma atividade cognitivamente custosa. A capacidade limitada de processar essas informações implica que para mantê-las atualizadas, o indivíduo precisa desviar recursos 
 que poderiam ser aplicados em outras atividades - coleta de alimentos, construção de abrigos, etc. Há evidências \cite[-5em]{deWaal2007,deWaal1990}\sourcesneeded de que o rastreamento de relações sociais demanda um considerável tempo dos individuos adultos em tribos de chimpanzés e humanos. Conforme se aumenta o tamanho do grupo, esse custo cresce com o número de ligações sociais possíveis e, portanto, quadraticamente com o número de indivíduos. Isso pode pode tornar a estratégia de adquirir e manter informações sobre todas as ligações sociais possíveis no grupo pouco adaptativa. Pode ser preferível ao agente nesse caso obter apenas informação sobre certas ligações sociais importantes e fiar-se em heurísticas para inferir as outras relações sociais (regras como ``amigo do amigo é amigo'', etc\ldots{}).
