added a few lines to autoridade.tex and fixed problem with figures

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,7 @@
         %\bibliographystyle{unsrtnat}
         \bibliography{bibdatabase}
     %body of appendices
-    \appendix
-        \include{./tex/apendices/glossario}
+%     \appendix
+%         \include{./tex/apendices/glossario}
 
 \end{document}
