--- a/tex/autoridade.tex
+++ b/tex/autoridade.tex
@@ -15,7 +15,8 @@ O registro arqueológico revela uma dinâmica temporal na organização social d
 \begin{figure}
 	\centering
 	\includegraphics[width = 1.1\textwidth]{figuras/ushaped.png}
-	\caption{\label{fig:ushaped} Ilustração da história da organização social dos humanos e primatas pré-humanos.}
+	\caption{ Ilustração da história da organização social dos humanos e primatas pré-humanos.}
+	\label{fig:ushaped}
 \end{figure}
 
 
@@ -27,7 +28,8 @@ vez mais complexas e sugere um cenário em que o rápido crescimento na importâ
 \begin{figure}
 	\centering
 	\includegraphics[width = 1.1\textwidth]{figuras/dunbar.png}
-	\caption{\label{fig:dunbarlaw} Gráfico em escala di-logaritimica do tamanho médio do grupo em função da razão média entre o volume do neo-córtex e o volume total do cérebro para diversas espécies de primatas. Dados disponíveis em \citep{Dunbar2009}.}
+	\caption{ Gráfico em escala di-logaritimica do tamanho médio do grupo em função da razão média entre o volume do neo-córtex e o volume total do cérebro para diversas espécies de primatas. Dados disponíveis em \citep{Dunbar2009}.}
+	\label{fig:dunbarlaw}
 \end{figure}
 
 \subsection{Dados etnoráficos (?)}
@@ -46,7 +48,7 @@ vez mais complexas e sugere um cenário em que o rápido crescimento na importâ
 Cada agente adquire essa informação através de mecanismos diversos: através da história social do grupo, baseado no comportamento pregresso dos agentes; através de mecanismos de aprendizado social como fofoca (\textit{gossip}) em que a comunicação com outros agentes permite que o agente aprenda sobre experiências de outros; etc. Uma vez adquirida, essa informação é critica para subsidiar decisões sociais a serem tomadas pelo agente: com que grupo de agentes fazer uma coalizão, quando esperar cooperação de um certo indivíduo, etc. Erros em decisões podem custar recursos e posição social, e influenciar negativamente a capacidade reprodutiva do agente. Portanto, espera-se que uma espécie de agentes que tenha surgido por evolução via seleção natural tenha mecanismos cognitivos adequados para tentar minimizar esses erros em algum sentido. 
 
 \newthought{A aquisição desse tipo de informação social} é uma atividade cognitivamente custosa. A capacidade limitada de processar essas informações implica que para mantê-las atualizadas, o indivíduo precisa desviar recursos 
-que poderiam ser aplicados em outras atividades - coleta de alimentos, construção de abrigos, etc. Há evidências \cite[-5em]{deWaal2007,deWaal1990}\sourcesneeded de que o rastreamento de relações sociais demanda um considerável tempo dos individuos adultos em tribos de chimpanzés e humanos. Conforme se aumenta o tamanho do grupo, esse custo cresce com o número de ligações sociais possíveis e, portanto, quadraticamente com o número de indivíduos. Isso pode pode tornar a estratégia de adquirir e manter informações sobre todas as ligações sociais possíveis no grupo pouco adaptativa. Pode ser preferível ao agente nesse caso obter apenas informação sobre certas ligações sociais importantes e fiar-se em heurísticas para inferir as outras relações sociais (regras como ``amigo do amigo é amigo'', etc\ldots{}).
+que poderiam ser aplicados em outras atividades - coleta de alimentos, construção de abrigos, etc. Há evidências \cite[-5em]{deWaal2007,deWaal1990} \sourcesneeded de que o rastreamento de relações sociais demanda um considerável tempo dos individuos adultos em tribos de chimpanzés e humanos. Conforme se aumenta o tamanho do grupo, esse custo cresce com o número de ligações sociais possíveis e, portanto, quadraticamente com o número de indivíduos. Isso pode pode tornar a estratégia de adquirir e manter informações sobre todas as ligações sociais possíveis no grupo pouco adaptativa. Pode ser preferível ao agente nesse caso obter apenas informação sobre certas ligações sociais importantes e fiar-se em heurísticas para inferir as outras relações sociais (regras como ``amigo do amigo é amigo'', etc\ldots{}).
 
 \newthought{Dessa forma, o modelo consistirá} dos seguintes elementos: muitos \emph{agentes} que interagem entre si, cada um carregando uma \emph{representação mental da estrutura social} do grupo a que pertence e individualmente tentando \emph{minimizar custos} associados a carregar esass informações sociais. Abaixo discutiremos uma representação matemática de cada um desses elementos. 
 
@@ -81,7 +83,7 @@ que poderiam ser aplicados em outras atividades - coleta de alimentos, construç
  \label{fig:graph1}
  \end{marginfigure}
  
- \newthought{Quando uma aresta é faltante} no grafo carregado por um agente, a informação social correspondente à essa aresta é incompleta - o agente não tem informação direta sobre essa, e o agente deve recorrer a heuristicas para determinar quaisquer informações necessárias. Para tal, vamos considerar que o grafo deve ser conexo - deve ser possível, para todos os pares de nós, encontrar um \emph{caminho} de arestas ligadas conectando os dois nós. Dessa forma, sempre é possível a um agente determinar alguma informação indireta enter dois nós desconexos, através de uma heuristica que utilize as outras arestas conhecidas. Um exemplo é o grafo da figura \ref{fig:graph2}, que representa um grafo do tipo estrela. 
+ \newthought{Quando uma aresta é faltante} no grafo carregado por um agente, a informação social correspondente à essa aresta é incompleta, e o agente deve recorrer a heuristicas para determinar quaisquer informações necessárias. Para tal, vamos considerar que o grafo deve ser conexo - deve ser possível, para todos os pares de nós, encontrar um \emph{caminho} de arestas ligadas conectando os dois nós. Dessa forma, sempre é possível a um agente determinar alguma informação indireta entre dois nós desconexos, através de uma heuristica que utilize as outras arestas conhecidas. Um exemplo é o grafo da figura \ref{fig:graph2}, que representa um grafo do tipo estrela. 
   \begin{marginfigure}[-10em]
  \begin{tikzpicture}[every node/.style={circle,white,fill=red}, shorten >= 1pt, auto, node distance =2cm, semithick]
    \node  (A)                    {A};
@@ -103,7 +105,7 @@ Nesse grafo, não é possível conhecer diretamente todas as relações sociais 
 
 \subsection{Custos}
 
-\newthought{Existem custos associados} à manutenção de um certo grafo de informações sociais. Há principalmente dois tipos de custos:  
+\newthought{Em nosso modelo} existem custos associados à manutenção de um certo grafo de informações sociais. Há dois tipos de custos:  
 \begin{enumerate}
 
 \item \newthought{O custo cognitivo} de adquirir e manter informação dos diferentes pares de individuos. Como discutido anteriormente, se o agente tem recursos cognitivos limitados, manter essas informações é custoso. Se assumirmos que o investimento de recursos para obter informações sobre cada aresta do grafo é constante, o custo cognitivo total por agente deverá ser proporcional ao número de arestas do grafo:
@@ -112,26 +114,28 @@ Nesse grafo, não é possível conhecer diretamente todas as relações sociais 
 \end{equation}
 onde $n_{e}$ é o número de arestas (\emph{edges}).
 
-\item \newthought{O custo social} de falhar em determinar corretamente a relação entre dois indivíduos. As heuristicas utilizadas pelo agente quando ele não possui informação direta sobre uma certa relação social podem falhar e, nesse caso, o agente pode comete um erro e tomar decisões baseadas nesse erro. Nesse caso existem custos - o agente pode avaliar incorretamente em que lado de uma disputa um individuo vai se posicionar, falhar em reconhecer uma coalizão em formação, etc, e ter prejuízos reais com uma situação social inesperada. As heuristicas que se valem de arestas conhecidas para inferir as relações desconhecidas devem tão menos confiáveis quanto maior o caminho mais curto no grafo entre os dois nós em questão. Quanto mais longos os trajetos a serem percorridos, maior é a probabilidade de erro. Portanto, o custo social esperado deve ser proporcional à distância geodésica média entre os nós do grafo:
+\item \newthought{O custo social} de falhar em determinar corretamente a relação entre dois indivíduos. As heuristicas utilizadas pelo agente quando ele não possui informação direta sobre uma certa relação social podem falhar e, nesse caso, o agente pode inferir erroneamente a relação social entre dois agentes. Ao  tomar decisões baseadas nessa avaliação errônea, o agente incorre em custos - o agente pode avaliar incorretamente em que lado de uma disputa um individuo vai se posicionar, falhar em reconhecer uma coalizão em formação, etc, e ter prejuízos reais com uma situação social inesperada. As heuristicas que se valem de relações conhecidas para inferir relações desconhecidas serão tão mais confiáveis quanto menor o caminho a ser percorrido no grafo entre os dois nós em questão. Quanto mais longos os trajetos a serem percorridos, maior é a probabilidade de erro. Portanto, o custo social esperado deve ser proporcional à distância geodésica média entre os nós do grafo:
 \begin{equation}
  H_{\text{social}} \propto \frac{2}{n(n-1)} \sum_{i<j}{L_{ij}}
 \end{equation}
 onde $L_{ij}$ é a distância geodésica entre os nós $i$ e $j$, e a soma é realizada sobre todos pares de agentes. 
 
 \end{enumerate}
-O custo total para cada agente será dado, portanto, por:
+Assim, para cada agente, o custo total de se manter uma certa representação mental da rede social do grupo é dado, portanto, por:
 \begin{equation}
    \label{eq:hamiltoniano}
    H = \frac{n_{e}}{\alpha}  + \bar{L}
 \end{equation}
-Onde $\bar{L}$ é a distancia geodésica média do grafo, $\alpha$ é uma constante associada à capacidade cognitiva do agente (quanto maior $\alpha$, menos importante é o custo cognitivo). Note que tipicamente $n_{e}$ escala como uma fração do número total de arestas possíveis $n(n-1)/2$ e que $\bar{L}$ escala tipicamente com $\log(n)$ para grafos aleatórios. É, portanto, interessante, reescrever (\ref{eq:hamiltoniano}), a menos de uma constante multiplicativa, como:
+Onde $\bar{L}$ é a distancia geodésica média do grafo, $\alpha$ é uma constante associada à importância relativa entre o custo cognitivo e o custo social (quanto maior $\alpha$, menos importante é o custo cognitivo). Note que tipicamente $n_{e}$ escala como uma fração do número total de arestas possíveis $n(n-1)/2$ e que $\bar{L}$ escala tipicamente com $\log(n)$ para grafos aleatórios. É, portanto, interessante, reescrever (\ref{eq:hamiltoniano}), a menos de uma constante multiplicativa, como:
 \begin{equation}
    \label{eq:hamiltoniano2}
    H = \phi_{e}  + a \bar{L}
 \end{equation}
-onde $\phi_{e} = \frac{n_{e}}{n(n-1)/2}$ é a fração de arestas ocupadas e $a = \frac{2\alpha}{n(n-1)}$ é uma constante de acoplamento: a capacidade cognitiva média dedicada a cada aresta. 
+onde $\phi_{e} = \frac{n_{e}}{n(n-1)/2}$ é a fração de arestas ocupadas e $a = \frac{2\alpha}{n(n-1)}$ é uma constante de acoplamento normalizada. 
 
 \subsection{Dinâmica para agentes isolados - máxima entropia}
+\subsection{Minimização do custo}
+\label{sec:mincusto}
 \newthought{Para que um modelo possa ser estabelecido}, não basta a expressão para o custo, mas uma descrição de que ações o agente deverá tomar com base em sua aferição do custo. A estratégia do agente é definida por uma certa escolha de arestas a investir. Em uma primeira abordagem, atribuimos ao agente a tendência a usar a estratégia que minimiza o custo total. Então deveriamos procurar pelo grafo definido por:
 \begin{equation}
 \label{eq:minimize}
@@ -152,7 +156,12 @@ onde $\beta$, uma espécie de inverso de temperatura, regula a importância rela
       0  & \text{outro caso}
            \end{cases}
 \end{equation}
-\subsection{Interpretação do parâmetro $\beta$}
+\subsection{Interpretação dos parâmetros $\alpha$ e $\beta$}
+
+O parâmetro $\alpha$ (ou sua versão normalizada, $a$) regula a importância relativa entre os dois custos - social e cognitivo. O valor de $\alpha$ é regulado pela capacidade cognitiva dos agentes: quanto maior a capacidade de realizar cálculos sociais, menor é a importância do custo cognitivo, maior é o valor de $\alpha$. No presente trabalho $\alpha$ será, portanto, interpretado como uma medida da capacidade cognitiva dos agentes. O parâmetro normalizado $a$ é, portanto, a fração da capacidade cognitiva que deveria ser gasta para aprender todas as relações sociais do grupo. 
+
+O parâmetro $\beta$ regula a escala em que flutuações no valor do custo total são toleradas. Para $\beta$ grande, variações no custo total acima do custo mínimo são muito pouco prováveis. Para valores maiores de $\beta$ as mesmas flutuações apresentam probabilidades maiores. Dessa forma, $\beta$ regula o quão prováveis são configurações que consistem de flutuações em torno das configurações ótimas discutidas na seção \emph{\nameref{sec:mincusto}}. Flutuações em torno do custo mínimo representam um dispêndio extra de energia e recursos que poderiam ser gastos em outras atividades, portanto $\beta$ pode ser parcialmente entendido como uma variável ecológica - escassez de recursos implica em menor possibilidade de permitir grandes flutuações do custo total. Além disso, pressões de pares pode causar o mesmo tipo de efeito de intolerância a erros de minimização do custo \sourcesneeded. Assim, $\beta$ é uma variável externa, que regula a intensidade da pressão para otimização do custo total, que pode ter origem social ou ecológica. 
+
 \subsection{Resultados numéricos para agentes isolados}
 \newthought{Simulações de Monte Carlo} desse modelo foram feitas usando o algoritmo de Metrópolis. Partindo de um grafo inicial aleatório (sorteado do ensemble de Erdos-Renyi, com fração de arestas $\frac{1}{2}$), a cada passo do algoritmo é proposta uma mudança em uma aresta do grafo - adicionando uma aresta faltante ou removendo uma aresta existente. Caso a mudança não quebre a conectividade do grafo, ela será aceita com probabilidade dada pelo fator de Gibbs: 
 \begin{equation}
@@ -162,38 +171,64 @@ e^{-\beta \left(H(G') - H(G)\right)}.
 
 \begin{figure}
   \includegraphics[width = 1.1\textwidth]{figuras/cutstar.png}
-  \caption[Corte do diagrama de fases apresentando a média térmica obtida via  Monte Carlo.]{\label{fig:cutstar} Corte do diagrama de fases apresentando a média térmica obtida via  Monte Carlo dos parâmetros de ordem normalizados $\dmax$ e $\davg$ em função de $\alpha$, com temperatura e número de agentes fixo, bem como seus desvios padrão. Sobreposto ao gráfico se observam exemplos de arquiteturas do grafo sorteadas da distribuição de equilibrio na região correspondente do diagrama. }
+  \caption[Corte do diagrama de fases apresentando o valor esperado dos parâmetros de ordem.]{Corte do diagrama de fases apresentando o valor esperado obtido via  Monte Carlo dos parâmetros de ordem normalizados $\dmax$ e $\davg$ em função de $\alpha$, com temperatura e número de agentes fixo, bem como seus desvios padrão. Sobreposto ao gráfico se observam exemplos de arquiteturas do grafo sorteadas da distribuição de equilibrio na região correspondente do diagrama. }
+  \label{fig:cutstar}
 \end{figure}
 \begin{fullwidth}
 \begin{figure}
 	\includegraphics[width = 2.1\textwidth, angle=90]{figuras/phasediagram.png}
- 	\caption{\label{fig:phasediagram} Diagrama de fases apresentando a razão $\frac{\davg}{\dmax}$ em função de $\alpha$ e temperatura, para um número fixo de agentes.}
+ 	\caption{ Diagrama de fases apresentando a razão $\frac{\davg}{\dmax}$ em função de $\alpha$ e temperatura, para um número fixo de agentes.}
+ 	\label{fig:phasediagram}
 \end{figure}
 \end{fullwidth}
-\newthought{Na figura} \ref{fig:cutstar} temos um corte do diagrama de fase desse modelo com temperatura e número de agentes constante, variando o parâmetro $\alpha$. Seja $d_i$ o grau do $i$-ésimo nó do grafo de um agente escolhido ao acaso. No painel superior destacamos dois parâmetros de ordem: $\dmax = \frac{1}{N-1}\max\left(d_1, d_2,\ldots, d_N\right)$, em azul, é proporcional ao grau do nó mais bem conectado do grafo, e $\davg = \frac{1}{N(N-1)}\sum_{i=1}^N d_i$, em vermelho, é proporcional ao grau médio de todos os nós do grafo. Uma vez que o maior possível grau para um nó é $N-1$, esses parâmetros foram normalizados para que o valor máximo seja 1. As linhas sólidas correspondem à média térmica obtida através da simulação de Monte Carlo do modelo, enquanto o sombreado ao redor da linha representa o desvio padrão obtido da mesma forma. No painel inferior apresentamos novamente o desvio padrão para melhor visualização. Sobrepostas aos gráficos estão figuras representativas de grafos sorteados da 
-distribuição de equilíbrio em pontos correspondentes do diagrama de fases. Como observado anteriormente, para $a = \frac{2\alpha}{N(N-1)}$ pequeno - baixa capacidade cognitiva, ou grupos grandes - há uma fase em que o grafo se organiza como uma estrela. Para $a$ grande - alta capacidade cognitiva ou grupos pequenos - o grafo tem conectividade densa, tendendo a um grafo totalmente conectado conforme o parâmetro aumenta. 
-
-\begin{figure}
-	\includegraphics[width = 1.15\textwidth]{figuras/critical.png}
- 	\caption{\label{fig:critical} Valor crítico do parâmetro $a$ em função da temperatura para diferentes tamanhos do sistema.}
-\end{figure}	
-
-\newthought{Uma caracteristica é interessante} na região intemediária, entretanto: o grafo continua com um nó fortemente central e baixa conectividade na periferia para valores de $a$ relativamente grandes, até que uma repentina mudança de comportamento, acompanhada de um pico nas variâncias dos parâmetros de ordem, indicando uma aparente transição de fase. Nessa segunda fase, a conectividade do nó mais central já não é mais máxima, e a conectividade dos nós periféricos é comparável à do nó central. Conforme $a$ cresce, o grafo tende a se tornar totalmente conectado, com valores de $\dmax$ e $\davg$ compativeis com os de um grafo no ensemble de Erdos-Renyi (um grafo aleatório, com número médio de arestas fixo).
-
+\newthought{Na figura} \ref{fig:cutstar} temos um corte do diagrama de fase desse modelo com temperatura e número de agentes constante, variando o parâmetro $\alpha$. Seja $d_i$ o grau do $i$-ésimo nó do grafo de um agente escolhido ao acaso. No painel superior destacamos dois parâmetros de ordem: $\dmax = \frac{1}{N-1}\max\left(d_1, d_2,\ldots, d_N\right)$, em azul, é proporcional ao grau do nó mais bem conectado do grafo, e $\davg = \frac{1}{N(N-1)}\sum_{i=1}^N d_i$, em vermelho, é proporcional ao grau médio de todos os nós do grafo. Uma vez que o maior possível grau para um nó é $N-1$, esses parâmetros foram normalizados para que o valor máximo seja 1. As linhas sólidas correspondem aos valores esperados:
+\begin{align}
+\E{\dmax} &= \sum_{G} P(G | \alpha, n, \beta) \dmax(G) \\
+\E{\davg} &= \sum_{G} P(G | \alpha, n, \beta) \davg(G)
+\end{align}
+obtida através da simulação de Monte Carlo do modelo, enquanto o sombreado ao redor da linha representa o desvio padrão obtido da mesma forma. No painel inferior apresentamos novamente o desvio padrão para melhor visualização. Sobrepostas aos gráficos estão figuras representativas de grafos sorteados da 
+distribuição de equilíbrio em pontos correspondentes do diagrama de fases. 
 
 \newthought{Na figura}\ref{fig:phasediagram} temos um diagrama de fases completo variando $\alpha$ e a temperatura para um número fixo de agentes. A variável descrita no mapa de cores é a razão $\frac{\davg}{\dmax}$. Esse diagrama mostra uma linha de transição de fases entre a região azul escura - a região em que a organização do grafo é fortemente centralizada, com nós periféricos pouco conectados, e uma região em que a razão $\frac{\davg}{\dmax}$ é menos extrema. Acima de uma temperatura crítica essa fase não é mais observada. A região vermelho escura corresponde à fase totalmente conectada, ou situações bem próximas disso. Nessa região não há grandes saltos nos parâmetros de ordem, que mudam continuamente com a temperatura e $a$. A linha de transição de fase pode ser observada para diferentes valores da temperatura na figura \ref{fig:critical}. Note que para $\beta^{-1} \to 0$, temos $\alpha^{\star} = 1$.
+\begin{figure}
+	\includegraphics[width = 1.15\textwidth]{figuras/critical.png}
+ 	\caption{Valor crítico do parâmetro $a$ em função da temperatura para diferentes tamanhos do sistema.}
+ 	\label{fig:critical}
+\end{figure}
 
+\subsection{Interpretação parcial dos resultados}
+
+O diagrama de fases apresenta três regimes. Para valores altos de $a = \frac{2\alpha}{N(N-1)}$, ou seja, alta capacidade cognitiva ou grupos com poucos agentes, todos os nós apresentam praticamente a mesma conectividade. O grafo é simétrico, com conectividade densa e bem próximo de totalmente conexo. A variação de $\E{\dmax}$ e $\E{\davg}$ com $a$ nesse regime é compatível com a de um ensemble de Erdös-Renyi com alta conectividade, o que indica que as arestas são mais ou menos aleatóriamente distribuidas, de forma totalmente simétrica.
+
+Para valores intermediários de $a$, existe um nó com conectividade ligeiramente maior, mas existem flutuações grandes. A taxa de aceitação do algoritmo de monte carlo é alta (ver: figura \ref{fig:acceptrate}). Nesse regime, o grafo é momentaneamente não-simétrico, mas estatísticamente qualquer nó pode ocupar a posição de conectividade maior e alterações desse nó central são frequentes. Há um pico nos desvios padrão dos parâmetros de ordem para um certo valor do parâmetro de controle $a{\star}$, indicando um possível ponto crítico. 
+\begin{figure}
+	\includegraphics[width = \textwidth]{figuras/acceptrate.png}
+ 	\caption[Taxa de aceitação do algoritmo de Monte Carlo]{Taxa de aceitação do algoritmo de Monte Carlo - fração das propostas de mudanças no microestado do sistema que foram aceitas com probabilidade dada pelo fator de Gibbs.}
+ 	\label{fig:acceptrate}
+\end{figure}
+
+Para valores mais baixos de $a$, a simetria é espontaneamente quebrada e apenas um nó ocupa uma posição central. Esse nó está conectado a todos os outros, que estão quase que exclusivamente conectados a ele. O grafo se torna uma estrela e não há flutuação observável na conectividade do nó central. Neste regime, a representação mental da rede de relacionamenos sociais construídas pelo agente é assimétrica e existe um único nó que serve como proxy para todas as relações sociais do grupo. Na representação mental do agente em questão, o status social de cada um dos outros nós é definido por como ele se relaciona a esse nó central.
 
 \subsection{Dinâmica para muitos agentes } 
 
-\newthought{As figuras acima} tratam de propriedades independentes da interação entre os agentes. Essa interação, como dito anteriormente, será introduzidas na forma de aprendizado social (``fofoca'' ou \textit{gossip}). Durante a simulação de Monte Carlo, com uma certa probabilidade $g$, dois agentes são sorteados e trocam informação uma aresta com probabilidade proporcional ao fator de Gibbs \eqref{eq:gibbsfactor}. Esse procedimento visa imitar o aprendizado social observado em humanos \cite[-2em]{Dunbar2010book}. Essa escolha de interação não altera os diagramas já mostrados, mas introduz correlação entre os grafos de diferentes agentes. 
+\newthought{As figuras acima} tratam de propriedades independentes da interação entre os agentes. Essa interação, como dito anteriormente, será introduzidas na forma de aprendizado social (``fofoca'' ou \textit{gossip}). Durante a simulação de Monte Carlo, duas possíveis fontes serão consideradas para a proposta de uma nova aresta no passo de Metropolis:
+\begin{itemize}
+ \item Com probabilidade $1-g$, um novo valor para a aresta $(i,j)$ do agente $k$ será sorteado ao acaso, 
+ \item Com probabilidade $g$, um novo valor para a aresta $(i,j)$ do agente $k$ será copiado da aresta $(i,j)$ de um outro agente $l$ sorteado ao acaso.
+\end{itemize}
+Essa proposta de novo valor de aresta será aceita com probabilidade proporcional ao fator de Gibbs \eqref{eq:gibbsfactor}. Esse procedimento visa imitar o aprendizado social observado em humanos \cite[-2em]{Dunbar2010book}. Essa escolha de interação não altera os diagramas de fase já mostrados no capítulo anterior, mas introduz correlação entre os grafos de diferentes agentes. 
 \begin{figure}
 	\centering
 	\includegraphics[width = 1\textwidth]{figuras/gossip.png}
- 	\caption[Parâmetros de ordem associados à correlação entre grafos de diferentes agentes]{\label{fig:gossip} Parâmetros de ordem associados à correlação entre grafos de diferentes agentes, calculados na fase em que os grafos apresentam estrutura de estrela. As curvas tracejadas correspondem à frequência do nó central mais frequente. As linhas tracejadas correspondem à entropia da distribuição de centros.}
+ 	\caption[Parâmetros de ordem associados à correlação entre grafos de diferentes agentes]{ Parâmetros de ordem associados à correlação entre grafos de diferentes agentes, calculados na fase em que os grafos apresentam estrutura de estrela. As curvas tracejadas correspondem à frequência do nó central mais frequente. As linhas tracejadas correspondem à entropia da distribuição de centros.}
+ 	\label{fig:gossip}
 \end{figure}
-Na figura \ref{fig:gossip} são exibidas duas grandezas que quantificam a correlação entre os grafos na fase estrela. Vamos denotar por $c_i$ o label que identifica o nó central do grafo do $i$-ésimo agente. Para um certo número $N$ de agentes temos então o conjunto $\{c_1, c_2, \ldots, c_N\}$. Seja a variável aleatória $c$ definida como um valor sorteado ao acaso desse conjunto. A primeira grandeza do grafo, correspondente às linhas tracejadas, é dada por $\max_{c} \Prob(c)$, ou seja, a frequencia do agente que mais frequentemente é o centro de algum grafo naquele passo do algoritmo. Isso corresponde de forma grosseira a que fração dos agentes tem grafos estrela com o mesmo nó ocupando o centro da estrela. A segunda variável é, a menos de uma constante multiplicativa, simplesmente a entropia da distribuição de $c$: $S(c) = -\sum_{c} \Prob(c) \log\Prob(c)$. Ambas as grandezas são calculadas para grafos em forma de estrela, em função da probabilidade de encontro entre dois agentes dada por $g$, para valores 
-fixos de temperatura, variando-se o número de agentes. O resultado mostra que, para baixos valores de $g$, a probabilidade de que um certo nó seja o centro de um agente tomado ao acaso é aproximadamente uniforme, e nenhum dos nós domina como centro de uma fração substancial de grafos. Para valores maiores de $g$, os grafos estrela tendem a se correlacionar e o mesmo nó pode ser central em uma grande fração de agentes. 
+
+Na figura \ref{fig:gossip} são exibidas duas grandezas que quantificam a correlação entre os grafos na fase estrela. Vamos denotar por $c_i$ o label que identifica o nó central do grafo do $i$-ésimo agente. Para um certo número $N$ de agentes temos então o conjunto $\{c_1, c_2, \ldots, c_N\}$. Seja a variável aleatória $C$ definida como um valor sorteado ao acaso desse conjunto e seja:
+\[
+ p(c) = \Prob{C = c}
+\]
+a sua distribuição de probabilidades. O primeiro parâmetro de ordem, correspondente às linhas tracejadas, é dada por $\E{\max_{c} p(c)}$, ou seja, o fração do número de agentes que possuem como nó central o nó que mais vezes aparece como nó central. Isso corresponde de forma grosseira a que fração dos agentes tem grafos estrela com o mesmo nó ocupando o centro da estrela. A segunda variável é, a menos de uma constante multiplicativa, simplesmente a entropia da distribuição de $c$: $S(c) = -\sum_{c} p(c) \log p(c)$. Ambas as grandezas são calculadas para grafos em forma de estrela, em função da probabilidade de encontro entre dois agentes dada por $g$, para valores fixos de temperatura, variando-se o número de agentes. O resultado mostra que, para baixos valores de $g$, a probabilidade de que um certo nó seja o centro de um agente tomado ao acaso é aproximadamente uniforme, e nenhum dos nós domina como centro de uma fração substancial de grafos. Para valores maiores de $g$, os grafos estrela tendem a se correlacionar e o mesmo nó pode ser central em uma grande fração de agentes. Dessa forma, é possível que no regime em que o grafo é uma estrela, o mesmo agente sirva como proxy para as relações sociais de todo o grupo para uma substancial maioria dos agentes.
 
 \newthought{É possível}, dessa forma, distinguir três situações, ou ``fases'' desse modelo:
 \begin{enumerate}
