--- a/confs/commands.tex
+++ b/confs/commands.tex
@@ -9,7 +9,7 @@
 \newcommand{\E}[1]{E\left[#1\right]}
 \newcommand{\Ec}[2]{E\left[#1 \right|\left. #2\right]}
 \newcommand{\ud}[0]{\mathrm{d}}
-\newcommand{\Prob}[1]{\mathbb{P}\mathrm{r}\left[#1\right]}
+\newcommand{\Prob}[1]{\mathrm{Prob}\left\{#1\right\}}
 \newcommand{\argmax}{\operatorname*{arg\,max}}
 \newcommand{\davg}{d_{\text{avg}}}
 \newcommand{\dmax}{d_{\text{max}}}
