--- a/confs/tweaks.tex
+++ b/confs/tweaks.tex
@@ -1,12 +1,17 @@
-%SIZE OF cation fonts and labels
+%SIZE OF caption fonts and labels
 
 \renewcommand{\captionfont}{\footnotesize}
 \renewcommand{\captionlabelfont}{\footnotesize}
 
 
+\hypersetup{pageanchor=false}
+
+% fix bug with hyperref that doesn't link to the figure but the section it belongs to.
+\AtBeginEnvironment{figure}{\phantomsection}
+\AtBeginEnvironment{table}{\phantomsection}
+
 %Show number in chapters
 \setcounter{secnumdepth}{0}
-
 
 % Adjust number position in chapters and a a \rceil symbol to separate the number from the title
 \titleformat{\chapter}%
