--- a/tex/autoridade.tex
+++ b/tex/autoridade.tex
@@ -203,7 +203,7 @@ O diagrama de fases apresenta três regimes. Para valores altos de $a = \frac{2\
 Para valores intermediários de $a$, existe um nó com conectividade ligeiramente maior, mas existem flutuações grandes. A taxa de aceitação do algoritmo de monte carlo é alta (ver: figura \ref{fig:acceptrate}). Nesse regime, o grafo é momentaneamente não-simétrico, mas estatísticamente qualquer nó pode ocupar a posição de conectividade maior e alterações desse nó central são frequentes. Há um pico nos desvios padrão dos parâmetros de ordem para um certo valor do parâmetro de controle $a{\star}$, indicando um possível ponto crítico. 
 \begin{figure}
 	\includegraphics[width = \textwidth]{figuras/acceptrate.png}
- 	\caption[Taxa de aceitação do algoritmo de Monte Carlo]{Taxa de aceitação do algoritmo de Monte Carlo - fração das propostas de mudanças no microestado do sistema que foram aceitas com probabilidade dada pelo fator de Gibbs.}
+ 	\caption[Taxa de aceitação do algoritmo de Monte Carlo]{Taxa de aceitação do algoritmo de Monte Carlo - fração das propostas de mudanças no microestado do sistema que foram aceitas com probabilidade dada pelo fator de Gibbs, sampleada com $\beta = 1.0$}
  	\label{fig:acceptrate}
 \end{figure}
 
