--- a/confs/packs.tex
+++ b/confs/packs.tex
@@ -18,7 +18,10 @@
 % 	! Paragraph ended before \@iiminipage was complete. 
 % eliminate the caption package and load subfib with the \usepackage[caption=false]{subfig} option.
 % Also, always use \label outside \caption.
+
 \usepackage[labelsep=endash]{caption} 
+% \usepackage{subcaption} 
+% \usepackage{graphicx}
 \usepackage{subfig} 
 
 \usepackage{amssymb,amsmath, amsfonts, amsthm} 
