--- a/tex/pretext/resumo.tex
+++ b/tex/pretext/resumo.tex
@@ -1,6 +1,6 @@
 \chapter*{Resumo}
 \addcontentsline{toc}{chapter}{\protect\numberline{}Resumo}
- Das ist ein text von Goethe. \lipsum[1]
+Neste trabalho exploramos dois tópicos de aplicação de teoria de informação e mecanica estatística a problemas de interesse em finanças, economia e sociologia. No primeiro tópico exploramos a conexão entre a teoria de dependência estatística e a teoria de informação através da teoria de cópulas. Após uma revisão do conceito de cópulas, reformulamos a definição de medidas de dependência de Renyi\cite{Renyi1959} usando esse conceito e mostramos que 
 
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{\protect\numberline{}Abstract}
